# VRT

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docs.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: vrt.rb
assets/brand/: brand-tokens.json
crates/vrt-cli/: Cargo.toml
crates/vrt-cli/src/: main.rs
crates/vrt-cli/tests/: cli.rs
crates/vrt-core/: Cargo.toml
crates/vrt-core/src/: lib.rs
crates/vrt-core/tests/: vrt_core.rs  vrt_mcp.rs
crates/xtask/: Cargo.toml
crates/xtask/fixtures/no-capability/: app.js  package.json
crates/xtask/fixtures/ts-app/: package.json  tsconfig.json
crates/xtask/fixtures/ts-app/src/auth/: session.ts
crates/xtask/fixtures/ts-app/src/billing/: stripe.ts
crates/xtask/fixtures/ts-graph/: package.json  tsconfig.json
crates/xtask/fixtures/ts-graph/src/: userRepo.ts  userService.ts  userView.ts
crates/xtask/fixtures/ts-lib/: package.json  tsconfig.build.json  tsconfig.json
crates/xtask/fixtures/ts-lib/src/: index.ts  label.ts  math.ts
crates/xtask/fixtures/ts-lib/test/: math.test.mjs
crates/xtask/fixtures/ts-lib/tools/: lint.mjs
crates/xtask/src/: agent.rs  detectors.rs  lib.rs  main.rs  model.rs  proof.rs  report.rs  runner.rs  scenarios.rs
crates/xtask/tests/: agent.rs  detectors.rs
docs/: architecture.mdx  brand.mdx  broker.mdx  cli.mdx  configuration.mdx  contributing.mdx  evidence.mdx  examples.mdx  github-action.mdx  growth-positioning.md  growth-positioning.mdx  growth.mdx  install.mdx  introduction.mdx  mcp.mdx  monorepos.mdx  quickstart.mdx  reports.mdx  sdk.mdx  sessions.mdx  token-saving.mdx  v0-technical-scope.md  v0-technical-scope.mdx
examples/next-single-app/: package.json  tsconfig.json
examples/next-turbo-pnpm/: package.json  (+1 more)
scripts/: brand-assets.test.mjs  bump-homebrew-formula.mjs  bump-homebrew-formula.test.mjs  check-mintlify-docs.mjs  release-readiness.test.mjs  release-workflow.test.mjs
(+4 files in other folders)
